# plugins

./: .gitignore  Makefile.am  README.md  configure.ac
fx2/mines/: .gitignore
include/: rc_device.h
input/: gfx.c  gfx.h  icons.h  input.c  input.h  text.c
spiegel-tv_doc/: Makefile.am  spiegel_tv_doc.lua
stb-backup/: Makefile.am  imgbackup
stb-startup/: old_stb-startup.lua  stb-startup.lua
stb-startup-ddt/: stb-startup.lua
stb-startup-vu/: Makefile.am
stb-switch-rc/: Makefile.am  switch_rc.cfg
