install-exec-local:
	install -d $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/SpiegelTV.png $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/spiegel_tv_doc.cfg $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/spiegel_tv_doc.lua $(DESTDIR)$(PLUGINDIR)
	install -m 0644 $(srcdir)/spiegel_tv_doc_hint.png $(DESTDIR)$(PLUGINDIR)
