install-exec-local:
	install -d $(DESTDIR)$(PLUGINDIR_VAR)
	install -m 0755 $(srcdir)/imgbackup $(DESTDIR)$(PLUGINDIR_VAR)
	install -m 0644 $(srcdir)/imgbackup.cfg $(DESTDIR)$(PLUGINDIR_VAR)
	install -m 0755 $(srcdir)/imgbackup.sh $(DESTDIR)$(PLUGINDIR_VAR)
	install -m 0644 $(srcdir)/imgbackup_hint.png $(DESTDIR)$(PLUGINDIR_VAR)
